Fixed the alignment of the header text and the upper content heading
Some typing mistakes fixed

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body div{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 200px;
+    padding: 0 340px;
 }
 
 .header div{
@@ -49,8 +49,8 @@ a, .upperContentTextContainer p{
     height: 485px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 0 200px;
+    justify-content: center;
+    gap: 40px;
 }
 
 .upperContentTextContainer {
